feat: Implement fast paths for enumerable string properties in JSObject and optimize array creation in JSContext and JSArray